fix: times not showing responsively

--- a/src/styles/poll.scss
+++ b/src/styles/poll.scss
@@ -155,7 +155,7 @@
 .poll-slot-time {
   border-top: 0 !important;
   border-bottom: 0 !important;
-  min-width: 4.5rem;
+  min-width: 5rem;
 
   @include media-breakpoint-up(sm) {
     min-width: 7rem;
